# SEO-Audit-Tool-FastAPI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py  worker.py
backend/app/audit/: engine.py  fetcher.py  parser.py  psi.py
backend/app/audit/checks/: headings.py  images.py  links.py  meta.py  social.py  structured_data.py
backend/app/db/: crud.py  models.py  session.py
backend/app/models/: api_schemas.py  schemas.py
backend/migrations/: README  env.py
backend/migrations/versions/: 0001_create_audit_jobs.py
backend/tests/: conftest.py  test_api.py  test_engine.py  test_fetcher.py  test_heading_checks.py  test_image_checks.py  test_link_checks.py  test_meta_checks.py  test_parser.py  test_psi.py  test_social_checks.py  test_structured_data_checks.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuditForm.tsx  ChecklistGrid.tsx  FeatureCards.tsx  Header.tsx  Hero.tsx  SearchCard.tsx  Spinner.tsx  icons.tsx
frontend/src/components/results/: AuditReport.tsx  CategoryStrip.tsx  CheckCard.tsx  CheckSection.tsx  ErrorCard.tsx  LoadingCard.tsx  PriorityFixes.tsx  ResultsView.tsx  ScoreHero.tsx  ScoreRing.tsx  SeverityTiers.tsx  UrlBar.tsx  category-icons.ts
frontend/src/lib/: api.ts  audit-format.ts  audit-styles.ts  error-copy.ts  types.ts  usePollAudit.ts
